--- a/src/WebJobSentinel/WebJobSentinel.nuspec
+++ b/src/WebJobSentinel/WebJobSentinel.nuspec
@@ -13,8 +13,8 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\WebJobSentinel.dll" target="lib\net45" />
-    <file src="bin\Release\WebJobSentinel.xml" target="lib\net45" />
-    <file src="bin\Release\WebJobSentinel.pdb" target="lib\net45" />
+    <file src="src\WebJobSentinel\bin\Release\WebJobSentinel.dll" target="lib\net45" />
+    <file src="src\WebJobSentinel\bin\Release\WebJobSentinel.xml" target="lib\net45" />
+    <file src="src\WebJobSentinel\bin\Release\WebJobSentinel.pdb" target="lib\net45" />
   </files>
 </package>
